# pongrobot-perception

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: cam_config.yaml  detector_config.yaml  euclidean_cluster_pipeline.yaml  frame_config.yaml  game_config.yaml  rate_config.yaml  table_detection_pipeline.yaml  tf_broadcast_node.yaml
include/: Calibrator.h  Cup.h  CupDetector.h  EuclideanClusterPipeline.h  GameManager.h  SocketTelemetryNode.h  TFBroadcastNode.h  TableDetectionPipeline.h  messagepack.h
launch/: 3D_cup_detector.launch  camera.launch  camera_tf.launch  cup_detector.launch  cup_detector_headless.launch  euclidean_cluser.launch  imu_depthcloud_demo.launch  perception.launch  pongrobot.launch  pongrobot_headless.launch  pongrobot_tf.launch  serial_imu.launch  table_detector.launch  tf_broadcaster.launch
launch/scripts/: install_service.sh
rviz/: cup_detector.rviz  depth_cloud.rviz  imu_depthcloud_demo.rviz  imu_pose.rviz  pongrobot.rviz  tf_viz.rviz
sketch/imu_tof/: imu_tof.ino
src/: 3D_cup_detector_node.cpp  Calibrator.cpp  Cup.cpp  CupDetector.cpp  EuclideanClusterPipeline.cpp  GameManager.cpp  SocketTelemetryNode.cpp  TFBroadcastNode.cpp  TableDetectionPipeline.cpp  calibrator_node.cpp  camera_tf_broadcaster.cpp  cup_detector_node.cpp  game_logic_node.cpp  messagepack.cpp  orientation_to_pose.cpp  realsense.cpp  realsense_node.cpp  socket_telemetry_node.cpp  tf_broadcaster.cpp
utils/: 10-brobot-launcher.rules  11-brobot-tf.rules  setupRemoteEnv.sh
utils/service/: start_service.sh  stop_service.sh  uninstall_service.sh
