<?xml version="1.0"?>
<package format="2">
  <name>brobot_cam</name>
  <version>0.0.0</version>
  <description>Pacakge to handle camera data for the brobot pong robot</description>

  <maintainer email="andrew@andrewtgutierrez.com">Andrew Gutierrez</maintainer>
  <license>BSD</license>
  <author email="andrew@andrewtgutierrez.com">Andrew Gutierrez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
