<?xml version="1.0"?>
<package format="2">
  <name>brobot_vision</name>
  <version>0.0.1</version>
  <description>Pacakge to handle camera data for the brobot pong robot</description>

  <maintainer email="andrew@andrewtgutierrez.com">Andrew Gutierrez</maintainer>
  <license>BSD</license>
  <author email="andrew@andrewtgutierrez.com">Andrew Gutierrez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>ros_cpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>
  <depend>tf</depend>
  <depend>librealsense2</depend>

</package>
