<?xml version="1.0"?>
<package format="2">
  <name>pongrobot_perception</name>
  <version>0.0.1</version>
  <description>Package to handle camera data for the brobot pong robot</description>

  <maintainer email="andrew@andrewtgutierrez.com">Andrew Gutierrez</maintainer>
  <license>BSD</license>
  <author email="andrew@andrewtgutierrez.com">Andrew Gutierrez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>pongrobot_actuation</exec_depend>

</package>
